# xp-clap-acq

./: Cargo.toml  README.md  rustfmt.toml
files/: input.txt
src/: lib.rs  main.rs  printtiming.rs
