[package]
name = "clap-acq"
version = "0.1.0"
edition = "2021"
authors = ["Ethan Skowronski-Lutz"]
description = "playing with command line rust"
homepage = "https://github.com/ethanmsl/xp-clap-acq"
documentation = "https://github.com/ethanmsl/xp-clap-acq"
repository = "https://github.com/ethanmsl/xp-clap-acq"
keywords = ["terminal", "cli", "command-line", "rust", "clap"]
# publish = []
# license = ""
# license-file = ""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
env_logger = "0.10.0"
indicatif = "0.17.3"
log = "0.4.17"
